# timberborn_support_solver

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/gui/: Cargo.toml
crates/gui/src/: main.rs  solver_backend.rs
crates/repl/: Cargo.toml
src/: dimensions.rs  encoder.rs  grid.rs  lib.rs  main.rs  math.rs  platform.rs  point.rs  solver.rs  solver_runner.rs  typed_ix.rs  utils.rs  world.rs
src/encoder/: platform_layout.rs  platform_limits.rs
src/math/: dimensions.rs  grid.rs  point.rs
test/: ex1.toml  ex2.toml  ex3.toml
timberborn_platform_cruncher_gui/: Cargo.toml
timberborn_platform_cruncher_gui/src/: app.rs  main.rs
timberborn_platform_cruncher_gui/src/app/: frame_history.rs  platform_type_selector.rs
