[package]
name = "timberborn_support_solver"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "timberborn_support_solver"

[lib]

[dependencies]
rustsat-glucose = { version = "0.7.2", features = [] }
rustsat = { version = "0.7.2", features = [] }
assertables = "9.5.5"
anyhow = "1.0.98"
thiserror = { version = "2.0.12" }
clap = { version = "4.5.39", features = ["cargo", "derive"] }
shlex = "1.3.0"
ctrlc = "3.4.7"
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"
test-case = "3.3.1"
futures = "0.3.31"
async-stream = "0.3.6"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "rt", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
new_zealand = "0.1.6"
tokio-util = "0.7.16"
