[workspace]
members = ["crates/repl", "crates/gui"]

[package]
name = "timberborn-platform-cruncher"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]

[dependencies]
rustsat = { version = "0.7.2", features = [] }
assertables = "9.5.5"
log = "0.4.27"
test-case = "3.3.1"
serde = { version = "1.0.219", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from", "is_variant"] }
new_zealand = "0.1.6"
petgraph = "0.8.2"
itertools = "0.14.0"
