[package]
name = "repl"
version = "0.1.0"
edition = "2024"

[dependencies]
timberborn_platform_cruncher = { path = "../../." }

log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["cargo", "derive"] }
shlex = "1.3.0"
thiserror = { version = "2.0.12" }
owo-colors = "4.2.2"
rustsat-glucose = { version = "0.7.2", features = [] }
rustsat = { version = "0.7.2", features = [] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "rt", "macros", "signal"] }
tokio-util = "0.7.16"
toml = "0.9.4"
